Assigning Material a second time crashes Blender #65520

Closed
opened 2019-06-05 12:00:14 +02:00 by Marcus Papathoma · 13 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: e80cbdac33
Worked: c13e10a740

Short description of error
Assigning Material a second time, crashes Blender

Exact steps for others to reproduce the error
Material_Crash.blend
Open the attached blend file.
Assigns material metal_bright_glossy to the selected cube (Cube.006)
In the viewport click on the cube left to the selected cube to select it (Cube.007).
Assign material metal_bright_glossy to it. Crash.
It seems if you assign this shader a second time, blender crashes.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-04 22:32, hash: `e80cbdac33` Worked: c13e10a7404d **Short description of error** Assigning Material a second time, crashes Blender **Exact steps for others to reproduce the error** [Material_Crash.blend](https://archive.blender.org/developer/F7088153/Material_Crash.blend) Open the attached blend file. Assigns material metal_bright_glossy to the selected cube (Cube.006) In the viewport click on the cube left to the selected cube to select it (Cube.007). Assign material metal_bright_glossy to it. Crash. It seems if you assign this shader a second time, blender crashes.

Added subscriber: @machieb

Added subscriber: @machieb

#65507 was marked as duplicate of this issue

#65507 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I cannot reproduce the issue. Can you be more specific by what you mean with "Assign"?

I cannot reproduce the issue. Can you be more specific by what you mean with "Assign"?

Open the dropdown Menu in the Material Properies and assign metal_bright_glossy.
Material_Dropdown.jpg
Select the another cube in the viewport and do the same. Crash.
If you can´t reproduce it´s maybe windows related?

Open the dropdown Menu in the Material Properies and assign metal_bright_glossy. ![Material_Dropdown.jpg](https://archive.blender.org/developer/F7088187/Material_Dropdown.jpg) Select the another cube in the viewport and do the same. Crash. If you can´t reproduce it´s maybe windows related?
Member

Hm, that's what I did as well. Still cannot reproduce it.
Please make sure that your gpu driver is up to date.

Hm, that's what I did as well. Still cannot reproduce it. Please make sure that your gpu driver is up to date.
Member

Added subscriber: @fclem

Added subscriber: @fclem

I have the latest gpu driver on my machine. Updated them yesterday.
blender beta c13e10a740 from yesterday isn`t crashing on my machine.
I also tested on another machine with windows 7 and an Geforce GTX 980. Same Problem. Crash.

I have the latest gpu driver on my machine. Updated them yesterday. blender beta c13e10a7404d from yesterday isn`t crashing on my machine. I also tested on another machine with windows 7 and an Geforce GTX 980. Same Problem. Crash.
Clément Foucault self-assigned this 2019-06-05 14:25:04 +02:00

I can reproduce.

I can reproduce.
Clément Foucault removed their assignment 2019-06-05 14:30:22 +02:00
Sergey Sharybin was assigned by Clément Foucault 2019-06-05 14:30:22 +02:00

This is a threading issue with the Preview Render. Crash happens in the duplication of nodetree inside the depsgraph evaluation.

/home/clement/Blender/build_linux/bin/blender(BLI_system_backtrace+0x35) [0x55680a074eb2]
/home/clement/Blender/build_linux/bin/blender(+0x1b35b47) [0x556809cdcb47]
/home/clement/Blender/build_linux/bin/blender(+0x1b35d49) [0x556809cdcd49]
/usr/lib/libc.so.6(+0x378b0) [0x7f2529b3c8b0]
/home/clement/Blender/build_linux/bin/blender(BKE_node_tree_copy_data+0x668) [0x556809e46bf3]
/home/clement/Blender/build_linux/bin/blender(BKE_id_copy_ex+0x5ac) [0x556809dd7b3d]
/home/clement/Blender/build_linux/bin/blender(+0x1f0f5df) [0x55680a0b65df]
/home/clement/Blender/build_linux/bin/blender(_ZN3DEG34deg_expand_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_6IDNodeEPNS_20DepsgraphNodeBuilderEb+0x11e) [0x55680a0b7539]
/home/clement/Blender/build_linux/bin/blender(_ZN3DEG34deg_update_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_6IDNodeE+0xc6) [0x55680a0b8621]
/home/clement/Blender/build_linux/bin/blender(_ZN3DEG26deg_evaluate_copy_on_writeEP9DepsgraphPKNS_6IDNodeE+0x70) [0x55680a0b8a1d]
/home/clement/Blender/build_linux/bin/blender(_ZSt13__invoke_implIvRPFvP9DepsgraphPKN3DEG6IDNodeEEJS1_RPS3_EET_St14__invoke_otherOT0_DpOT1_+0x4c) [0x55680a0a0bad]
/home/clement/Blender/build_linux/bin/blender(_ZSt8__invokeIRPFvP9DepsgraphPKN3DEG6IDNodeEEJS1_RPS3_EENSt15__invoke_resultIT_JDpT0_EE4typeEOSC_DpOSD_+0x5e) [0x55680a09f29c]
/home/clement/Blender/build_linux/bin/blender(_ZNSt5_BindIFPFvP9DepsgraphPKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS3_EE6__callIvJOS1_EJLm0ELm1EEEET_OSt5tupleIJDpT0_EESt12_Index_tupleIJXspT1_EEE+0x84) [0x55680a09d986]
/home/clement/Blender/build_linux/bin/blender(_ZNSt5_BindIFPFvP9DepsgraphPKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS3_EEclIJS1_EvEET0_DpOT_+0x50) [0x55680a09b202]
/home/clement/Blender/build_linux/bin/blender(_ZNSt17_Function_handlerIFvP9DepsgraphESt5_BindIFPFvS1_PKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS5_EEE9_M_invokeERKSt9_Any_dataOS1_+0x37) [0x55680a097920]
/home/clement/Blender/build_linux/bin/blender(_ZNKSt8functionIFvP9DepsgraphEEclES1_+0x49) [0x55680a0b5b7b]
/home/clement/Blender/build_linux/bin/blender(+0x1f0e117) [0x55680a0b5117]
/home/clement/Blender/build_linux/bin/blender(BLI_task_pool_work_and_wait+0x7ee) [0x55680a0779aa]
/home/clement/Blender/build_linux/bin/blender(BLI_task_pool_work_wait_and_reset+0x18) [0x55680a077ca3]
/home/clement/Blender/build_linux/bin/blender(_ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE+0x119) [0x55680a0b5a4c]
/home/clement/Blender/build_linux/bin/blender(DEG_evaluate_on_framechange+0xbe) [0x55680a0858ee]
/home/clement/Blender/build_linux/bin/blender(BKE_scene_graph_update_for_newframe+0xc7) [0x556809ec3716]
/home/clement/Blender/build_linux/bin/blender(+0x1fa49ae) [0x55680a14b9ae]
/home/clement/Blender/build_linux/bin/blender(RE_engine_render+0x56e) [0x55680a14c3d5]
/home/clement/Blender/build_linux/bin/blender(+0x1fa8bed) [0x55680a14fbed]
/home/clement/Blender/build_linux/bin/blender(RE_PreviewRender+0x10b) [0x55680a1547fd]
/home/clement/Blender/build_linux/bin/blender(+0x40fb682) [0x55680c2a2682]
/home/clement/Blender/build_linux/bin/blender(+0x40fb7c7) [0x55680c2a27c7]
/home/clement/Blender/build_linux/bin/blender(+0x40fc0c6) [0x55680c2a30c6]
/home/clement/Blender/build_linux/bin/blender(+0x40fc168) [0x55680c2a3168]
/home/clement/Blender/build_linux/bin/blender(+0x40fc461) [0x55680c2a3461]
/home/clement/Blender/build_linux/bin/blender(+0x21ec27e) [0x55680a39327e]
/home/clement/Blender/build_linux/bin/blender(+0x1ed263a) [0x55680a07963a]
/usr/lib/libpthread.so.0(+0x7a92) [0x7f252b06ea92]
/usr/lib/libc.so.6(clone+0x43) [0x7f2529bffcd3]
This is a threading issue with the Preview Render. Crash happens in the duplication of nodetree inside the depsgraph evaluation. ``` /home/clement/Blender/build_linux/bin/blender(BLI_system_backtrace+0x35) [0x55680a074eb2] /home/clement/Blender/build_linux/bin/blender(+0x1b35b47) [0x556809cdcb47] /home/clement/Blender/build_linux/bin/blender(+0x1b35d49) [0x556809cdcd49] /usr/lib/libc.so.6(+0x378b0) [0x7f2529b3c8b0] /home/clement/Blender/build_linux/bin/blender(BKE_node_tree_copy_data+0x668) [0x556809e46bf3] /home/clement/Blender/build_linux/bin/blender(BKE_id_copy_ex+0x5ac) [0x556809dd7b3d] /home/clement/Blender/build_linux/bin/blender(+0x1f0f5df) [0x55680a0b65df] /home/clement/Blender/build_linux/bin/blender(_ZN3DEG34deg_expand_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_6IDNodeEPNS_20DepsgraphNodeBuilderEb+0x11e) [0x55680a0b7539] /home/clement/Blender/build_linux/bin/blender(_ZN3DEG34deg_update_copy_on_write_datablockEPKNS_9DepsgraphEPKNS_6IDNodeE+0xc6) [0x55680a0b8621] /home/clement/Blender/build_linux/bin/blender(_ZN3DEG26deg_evaluate_copy_on_writeEP9DepsgraphPKNS_6IDNodeE+0x70) [0x55680a0b8a1d] /home/clement/Blender/build_linux/bin/blender(_ZSt13__invoke_implIvRPFvP9DepsgraphPKN3DEG6IDNodeEEJS1_RPS3_EET_St14__invoke_otherOT0_DpOT1_+0x4c) [0x55680a0a0bad] /home/clement/Blender/build_linux/bin/blender(_ZSt8__invokeIRPFvP9DepsgraphPKN3DEG6IDNodeEEJS1_RPS3_EENSt15__invoke_resultIT_JDpT0_EE4typeEOSC_DpOSD_+0x5e) [0x55680a09f29c] /home/clement/Blender/build_linux/bin/blender(_ZNSt5_BindIFPFvP9DepsgraphPKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS3_EE6__callIvJOS1_EJLm0ELm1EEEET_OSt5tupleIJDpT0_EESt12_Index_tupleIJXspT1_EEE+0x84) [0x55680a09d986] /home/clement/Blender/build_linux/bin/blender(_ZNSt5_BindIFPFvP9DepsgraphPKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS3_EEclIJS1_EvEET0_DpOT_+0x50) [0x55680a09b202] /home/clement/Blender/build_linux/bin/blender(_ZNSt17_Function_handlerIFvP9DepsgraphESt5_BindIFPFvS1_PKN3DEG6IDNodeEESt12_PlaceholderILi1EEPS5_EEE9_M_invokeERKSt9_Any_dataOS1_+0x37) [0x55680a097920] /home/clement/Blender/build_linux/bin/blender(_ZNKSt8functionIFvP9DepsgraphEEclES1_+0x49) [0x55680a0b5b7b] /home/clement/Blender/build_linux/bin/blender(+0x1f0e117) [0x55680a0b5117] /home/clement/Blender/build_linux/bin/blender(BLI_task_pool_work_and_wait+0x7ee) [0x55680a0779aa] /home/clement/Blender/build_linux/bin/blender(BLI_task_pool_work_wait_and_reset+0x18) [0x55680a077ca3] /home/clement/Blender/build_linux/bin/blender(_ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE+0x119) [0x55680a0b5a4c] /home/clement/Blender/build_linux/bin/blender(DEG_evaluate_on_framechange+0xbe) [0x55680a0858ee] /home/clement/Blender/build_linux/bin/blender(BKE_scene_graph_update_for_newframe+0xc7) [0x556809ec3716] /home/clement/Blender/build_linux/bin/blender(+0x1fa49ae) [0x55680a14b9ae] /home/clement/Blender/build_linux/bin/blender(RE_engine_render+0x56e) [0x55680a14c3d5] /home/clement/Blender/build_linux/bin/blender(+0x1fa8bed) [0x55680a14fbed] /home/clement/Blender/build_linux/bin/blender(RE_PreviewRender+0x10b) [0x55680a1547fd] /home/clement/Blender/build_linux/bin/blender(+0x40fb682) [0x55680c2a2682] /home/clement/Blender/build_linux/bin/blender(+0x40fb7c7) [0x55680c2a27c7] /home/clement/Blender/build_linux/bin/blender(+0x40fc0c6) [0x55680c2a30c6] /home/clement/Blender/build_linux/bin/blender(+0x40fc168) [0x55680c2a3168] /home/clement/Blender/build_linux/bin/blender(+0x40fc461) [0x55680c2a3461] /home/clement/Blender/build_linux/bin/blender(+0x21ec27e) [0x55680a39327e] /home/clement/Blender/build_linux/bin/blender(+0x1ed263a) [0x55680a07963a] /usr/lib/libpthread.so.0(+0x7a92) [0x7f252b06ea92] /usr/lib/libc.so.6(clone+0x43) [0x7f2529bffcd3] ```

This issue was referenced by 5f737cc18f

This issue was referenced by 5f737cc18fb9d4385d76a9cc652fc4e1a32bbd34

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @AmirShehata, @animate1978

Added subscribers: @AmirShehata, @animate1978
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65520
No description provided.