Fix T65520: Assigning Material a second time crashes Blender